# literate-pancake

./: DEPLOYMENT.md  README.md  README_DEPLOY_NOTES.md  SECURITY.md  TUTORIAL.md  __init__.py  aggregator.py  api.py  benchmark.py  client_abc.py  compression.py  config.py  config.yaml  connection_manager.py  constants.py  critical_point.py  dashboard.py  data_loader.py  decryptor-deployment.yaml  deploy.sh  docker-compose.yml  dp_rng.py  environment.yml  fix_magic_numbers.patch  grpc_client_stream.py  grpc_server.py  grpc_server_stream.py  inference.py  learner.py  logger.py  models.py  monitoring.py  orchestrator.py  prometheus.yml  protocol_messages.py  protocols.py  requirements-lock.txt  requirements.txt  run_experiment.py  server.py  (+2 more)
Documentation/: TUTORIAL.md
advanced/: adaptive_compressor.py  adaptive_privacy.py  hierarchical_aggregator.py  security_verifier.py  timing_protector.py
bench/: bench_compare.py  bench_concurrency.py
bindings/: vsa_proofs.py
clients/: client_uploader.py  client_utils.py
config/: production.env
crypto/: __init__.py  auth.py  crypto_utils.py  he_tenseal.py  he_tenseal_wrapper.py  he_wrapper.py  kms_aws.py  kms_vault.py  primitives.py
decryptor/: decryptor_service.py  requirements.txt
docker/: Dockerfile  docker-compose.yml  tenseal-builder.Dockerfile
edge/: edge_server.py
fed_crypto/: Cargo.toml  README.md  constants.py  primitives.py
fed_crypto/src/: compressor.rs  lib.rs  mask.rs  shamir.rs
global/: global_aggregator.py
helm-chart/: Chart.yaml  values.yaml
infra/: kafka_client.py  redis_client.py
(+92 files in other folders)
